# Rust-Coder-CLI

./: .agent_index.json  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-MIT  README.md  config_example.toml  prompt.md.example  tmp_rovodev_implementation_plan.md  tmp_rovodev_test_prompt.rs  tmp_rovodev_test_wrap  tmp_rovodev_test_wrap.rs
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_REPORT.md  CONTRIBUTING.md  EXAMPLES.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  NEW_FEATURES.md  PUBLISH.md  REACT_PATTERN.md  README_FULL.md  TESTING.md  TEST_IMPROVEMENTS.md  TROUBLESHOOTING.md
rust_tui_coder/: AUTONOMOUS_AGENT_README.md  Cargo.toml  README.md  config.toml  config_example.toml  plan.md
rust_tui_coder/src/: agent.rs  app.rs  config.rs  llm.rs  main.rs  ui.rs
src/: agent.rs  app.rs  config.rs  lib.rs  llm.rs  main.rs  ui.rs
tests/: agent_tests.rs  app_tests.rs  comprehensive_tests.rs  config_tests.rs  edge_case_tests.rs  integration_tests.rs  llm_tests.rs  performance_tests.rs  plan_tests.rs  ui_tests.rs
