[package]
name = "rust_tui_coder"
version = "0.2.1"
edition = "2021"
description = "AI-powered terminal coding assistant with interactive TUI, supporting multiple LLMs and comprehensive development tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ammar-Alnagar/Rust-Coder-CLI"
homepage = "https://github.com/Ammar-Alnagar/Rust-Coder-CLI"
documentation = "https://docs.rs/rust_tui_coder"
keywords = ["tui", "ai", "coding-assistant", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.70"
exclude = [
    "config.toml",
    "plan.md",
    ".git",
    ".gitignore",
    "tmp_rovodev_*",
    "*.png",
]

[[bin]]
name = "rust_tui_coder"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.26.0", features = ["all-widgets"] }
crossterm = "0.27.0"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
futures-util = "0.3.30"
